FIX Ensure visitor profile country name doesn't overflow (#21145)
* fix : visitor profile country name overflow issue

* fix : remove unnecessary changes

--- a/plugins/Live/stylesheets/visitor_profile.less
+++ b/plugins/Live/stylesheets/visitor_profile.less
@@ -290,6 +290,7 @@
         white-space: nowrap;
         position: absolute;
         left: 26px;
+        right: 0;
       }
     }
 
